--- a/blog/posts/templates/base.html
+++ b/blog/posts/templates/base.html
@@ -1,43 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 
 <head>
     <title>BaronSamedi</title>
-
+    <link rel="icon" href="{% static "img/blog_icon.png" %}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}" />
 </head>
 
 <body>
-    <style>
-        body {
-            font-family: "Roboto", sans-serif;
-            font-size: 17px;
-            background-color: #fdfdfd;
-        }
-
-        .shadow {
-            box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
-        }
-
-        .btn-danger {
-            color: #fff;
-            background-color: #f00000;
-            border-color: #dc281e;
-        }
-
-        .masthead {
-            background: #3398E1;
-            height: auto;
-            padding-bottom: 15px;
-            box-shadow: 0 16px 48px #E3E7EB;
-            padding-top: 10px;
-        }
-    </style>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">BaronSamedi</a>
@@ -63,13 +39,11 @@
         </div>
     </nav>
 
-    {% block content %}
-    {% endblock content %}
+    {% block content %}{% endblock content %}
 
     <footer class="py-3 bg-grey fixed-bottom">
-        <p class="m-0 text-dark text-center ">Copyright &copy; BaronSamedi</p>
+        <p class="m-0 text-dark text-center">Copyright &copy; BaronSamedi</p>
     </footer>
-
 </body>
 
 </html>
